--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/yeonsung"
         android:text="Tên Món"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +21,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView4"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="200dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
@@ -32,8 +33,8 @@
 
         <ImageView
             android:id="@+id/DetailFoodImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
             android:scaleType="centerCrop"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
     </androidx.cardview.widget.CardView>
@@ -46,6 +47,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/yeonsung"
         android:text="Mô tả"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView4" />
@@ -69,6 +71,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/yeonsung"
         android:text="Thành phần"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/DescriptionTextView"
         app:layout_constraintTop_toBottomOf="@+id/DescriptionTextView" />
@@ -93,6 +96,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/arrow_circle_left" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/addtocart"
+        android:fontFamily="@font/yeonsung"
+        android:text="Thêm vào giỏ hàng"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/IngredientsTextView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
