--- a/app/src/main/res/layout/buy_again_item.xml
+++ b/app/src/main/res/layout/buy_again_item.xml
@@ -11,8 +11,8 @@
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,8 +42,8 @@
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/yeonsung"
                 android:text="foodName"
-                android:textSize="16sp"
                 android:textColor="@color/black"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/buyAgainFoodPrice"
                 app:layout_constraintStart_toEndOf="@+id/buyAgainFoodImage"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -52,6 +52,7 @@
                 android:id="@+id/buyAgainFoodPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_bold"
                 android:text="$5"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
