--- a/app/src/main/res/layout/activity_choose_location.xml
+++ b/app/src/main/res/layout/activity_choose_location.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ChooseLocationActivity">
+    tools:context="com.example.app1.ChooseLocationActivity">
 
     <TextView
         android:id="@+id/textView10"
