--- a/app/src/main/res/layout/activity_pay_out.xml
+++ b/app/src/main/res/layout/activity_pay_out.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".PayOutActivity">
+    tools:context="com.example.app1.PayOutActivity">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
