--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Splash_Screen">
+    tools:context="com.example.app1.Splash_Screen">
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="185dp"
