--- a/app/src/main/res/layout/activity_pay_out.xml
+++ b/app/src/main/res/layout/activity_pay_out.xml
@@ -13,7 +13,7 @@
     android:orientation="vertical">
 
     <ImageButton
-        android:id="@+id/btnBack"
+        android:id="@+id/backButton"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="16dp"
@@ -36,7 +36,7 @@
         android:textColor="@color/textcolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnBack" />
+        app:layout_constraintTop_toBottomOf="@+id/backButton" />
 
     <LinearLayout
         android:layout_width="match_parent"
