--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -79,15 +79,29 @@
                     android:id="@+id/orderStatus"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="28dp"
-                    app:cardBackgroundColor="#4CAF50"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="64dp"
+                    app:cardBackgroundColor="#CAD8CA"
                     app:cardCornerRadius="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
                 </androidx.cardview.widget.CardView>
 
+                <Button
+                    android:id="@+id/receivedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:backgroundTint="@color/textcolor"
+                    android:text="da nhan"
+                    android:visibility="invisible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/orderStatus"
+                    app:layout_constraintHorizontal_bias="0.507"
+                    app:layout_constraintStart_toStartOf="@+id/orderStatus"
+                    app:layout_constraintTop_toBottomOf="@+id/orderStatus" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
