--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,19 +16,10 @@
             android:id="@+id/editButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="right"
+            android:layout_gravity="center"
             android:layout_marginTop="30dp"
             android:backgroundTint="@color/textcolor"
             android:text="Sửa hồ sơ" />
-
-        <Button
-            android:id="@+id/logoutButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:layout_marginTop="30dp"
-            android:backgroundTint="@color/textcolor"
-            android:text="Thoát" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -202,7 +193,16 @@
                 android:inputType="text" />
         </LinearLayout>
 
-</LinearLayout>
+        <Button
+            android:id="@+id/logoutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="@color/textcolor"
+            android:text="Thoát" />
+
+    </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/saveinfoButton"
@@ -220,7 +220,5 @@
         android:textColor="@color/textcolor"
         android:textSize="20dp" />
 
-
-
-
 </FrameLayout>
+
